<resources>
    
    <string name="aug_fld_title_focus_area_color">Focus Area Color</string>
    <string name="aug_fld_title_meter_area_color">Focus Area Color</string>
    <string name="aug_fld_title_default_focus_area_edge_sz">Default Focus Area Edge Size</string>
    <string name="aug_fld_title_reg_pics">Register Pictures with Media Store (Gallery)</string>
    <string name="aug_fld_title_show_filename">Show Filename after Taking Picture</string>
    <string name="aug_fld_title_override_fa">Touch Screen to Focus</string>
    <string name="aug_fld_default_dirname">Augie</string>
    <string name="aug_fld_title_fn_tmplate">Filename Template</string>
    <string name="aug_fld_fn_tmplate">Augie_%y%M%d_%h%m%s_image</string>
    <string name="aug_fld_title_blackout">Blackout screen while shooting</string>
    <string name="aug_fld_title_shooting_first_delay">Delay (in seconds)</string>
    <string name="aug_fld_title_shooting_interval">Interval (in seconds)</string>
    <string name="aug_fld_title_shooting_dur">Duration (in minutes)</string>
    <string name="aug_fld_title_horizon_pixel_drag_sensitivity">Pixel Sensitivity for Drag</string>
    <string name="aug_fld_title_horizon_hline_width">Horizontal Line Width</string>
    <string name="aug_fld_title_horizon_vline_width">Vertical Line Width</string>
    <string name="aug_fld_title_histogram_height">Histogram Height</string>
    <string name="aug_fld_title_histogram_show_rgb">Show RGB</string>
    <string name="aug_fld_title_gps_longitude">Longitude</string>
    <string name="aug_fld_title_gps_latitude">Latitude</string>
    <string name="aug_fld_title_gps_enabled">GPS is Enabled</string>
    <string name="aug_fld_title_root_dir">Picture File Root:</string>
    <string name="aug_fld_title_dir">Directory:</string>
    <string name="aug_fld_title_mode_list">Modes</string>
    <string name="aug_fld_title_cam_list">Cameras</string>
    <string name="aug_fld_title_cam_settings_list">Camera Settings</string>
    <string name="aug_fld_title_augiement_list">Augiements</string>
    <string name="aug_fld_title_max_focus_tries">Max Focus Tries</string>
    <string name="aug_fld_title_manage_buffers">Manage Buffers</string>
    <string name="aug_fld_title_max_faces">Max number of faces</string>

    <string name="aug_fld_title_color_mode">Color Mode</string>
    <string name="aug_fld_title_white_bal">White Balance</string>
    <string name="aug_fld_title_scene_mode">Scene Mode</string>
    <string name="aug_fld_title_anti_banding_values">Antibanding Values</string>
    <string name="aug_fld_title_flash_mode">Flash Mode</string>
    <string name="aug_fld_title_focus_mode">Focus Mode</string>
    <string name="aug_fld_title_zoom">Zoom</string>
    <string name="aug_fld_title_exp_comp">Exposure Comp</string>
    <string name="aug_fld_title_iso">ISO</string>
    <string name="aug_fld_title_no_settings">No Settings</string>
    <string name="aug_fld_title_pic_fmt">Picture Format</string>
    <string name="aug_fld_title_prev_fmt">Preview Format</string>
    <string name="aug_fld_title_x_pic_fmt">(X)Picture Format</string>
    <string name="aug_fld_title_shutter_sound">Shutter Sound</string>
    <string name="aug_fld_title_pic_sz">Picture Size</string>
    <string name="aug_fld_title_prev_sz">Preview Size</string>
    <string name="aug_fld_title_jpg_q">JPEG Quality</string>
    <string name="aug_fld_title_jpg_thn_q">Thumbnail Quality</string>
    <string name="aug_fld_title_prev_fps_range">Preview FPS Range</string>
    <string name="aug_fld_title_etcha_enabled">Etcha is Enabled</string>
    
</resources>
