<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

<TableLayout 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" >
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_focus_area_color" 
	/>

	<Spinner
	android:id="@+id/focus_area_camera_colors"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_meter_area_color" 
	/>

	<Spinner
	android:id="@+id/meter_area_camera_colors"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >

	<CheckBox
		android:id="@+id/alwaysSetFocusArea"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
	    android:text="@string/aug_fld_title_override_fa" 
		/>
	</TableRow>

	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_default_focus_area_edge_sz" 
	/>
    
	<Spinner
	android:id="@+id/defaultFocusAreaSz"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>

	</TableRow>
	
</TableLayout>
</ScrollView>
