<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

<TableLayout 
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical" > 
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_horizon_pixel_drag_sensitivity" 
	/>
    
	<Spinner
	android:id="@+id/closePixelDist"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_horizon_hline_width" 
	/>
    
	<Spinner
	android:id="@+id/horizLineWidth"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
	
	<TableRow
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
    >
    <TextView
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	android:text="@string/aug_fld_title_horizon_vline_width" 
	/>
    
	<Spinner
	android:id="@+id/vertLineWidth"
	android:layout_width="fill_parent"
	android:layout_weight="1"
	android:layout_height="wrap_content"
	/>
	</TableRow>
    
</TableLayout>
</ScrollView>
